# misc

./: LICENSE  README.md
.github/workflows/: python-app.yml
countingBound/: .gitignore  bound.lp  countingBound.aux  countingBound.bbl  countingBound.blg  countingBound.out  countingBound.tex  countingBound.toc  functionCount.R  gateCount.R  make.sh  maximalCliqueSize.py  pairConjecture1.R  references.bib  test1.R
countingBound/R/: Hasse.R  bound1.R  figs1.R  figs1.Rout
countingBound/bound2/: bound.lp  countingBound2.aux  countingBound2.bbl  countingBound2.blg  countingBound2.out  countingBound2.tex  countingBound2.toc  make.sh  post.txt  references.bib  tune_20250507.abc
countingBound/bound3/: countingBound3.aux  countingBound3.bbl  countingBound3.blg  countingBound3.fdb_latexmk  countingBound3.fls  countingBound3.out  countingBound3.tex  countingBound3.toc  make.sh  references.bib
countingBound/cliqueCounter/: CliqueCoverageCounter.cc  CliqueCoverageCounter.h  CliqueList.cc  CliqueList.h  Makefile  (+17 more)
countingBound/py/clique_parity_nn/: README.md  pyproject.toml  requirements.txt
countingBound/py/clique_parity_nn/src/clique_parity_nn/: data.py  models.py  plotting.py  train.py
plog/: Classifying_digits_using_clustering.ipynb  Cython_practice.ipynb  EP_discrete.ipynb  Factoring3.ipynb  Factoring_using_loopy_belief_propagation.ipynb  FermatFactoringVariation.ipynb  Fermat_style_factoring_using_a_RNS,_take_4.ipynb  PGMax_Sudoku.ipynb  README.md
plot/: FermatFactoringVariation.ipynb
tricycle/: polarMesh.py  screw2.FCMacro  sizeTest1.FCMacro  wheel2.FCMacro
(+470 files in other folders)
